# cpp_examples

./: .clangd  CMakeLists.txt  makefile
examples/: command.cpp  concept_list.cpp  derived.cpp  expected.cpp  fake_strategy.cpp  observer.cpp  print.cpp  reimpl_strategy.cpp  span.cpp  string_view.cpp  type_erasure.cpp  typename_class.cpp  unique_ptr.cpp
